<resources>
    <string name="app_name">Automotriz</string>
    <string name="txt_load_activity_error">Error al cargar la actividad</string>
    <string name="txt_news">Noticias</string>
    <string name="txt_details">Detalles</string>
    <string name="txt_contact">Contactar</string>
    <string name="txt_message_data">Si los datos no son correctos puedes actualizarlos en Mi Cuenta</string>
    <string name="txt_send">Enviar</string>
    <string name="txt_find_sucursal">Encunetra una sucursal cerca de ti</string>
    <string name="txt_search">Buscar</string>
    <string name="txt_interested">Me intersa el auto:</string>
    <string name="txt_btn_save">Guardar</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellido paterno</string>
    <string name="hint_sur_name">Apellido materno</string>
    <string name="txt_call_us">¿Tines dudas?</string>
    <string name="txt_call">Llamar</string>
    <string name="txt_required_files_register">Todos los campos son obligatorios</string>
    <string name="txt_email_already_exists">El email ya se encuentra registrado</string>
    <string name="txt_register_user_error">Error al registrar el usuario</string>
    <string name="txt_user_registered">Tus datos se han registrado</string>
    <string name="txt_sentra">Sentra</string>
    <string name="txt_versa">Versa</string>
    <string name="txt_tsuru">Tsuru</string>
    <string name="txt_tida">Tida</string>
    <string name="txt_march">March</string>
    <string name="txt_transmission">Transmisión</string>
    <string name="txt_automatic">Automática</string>
    <string name="txt_manual">Manual</string>
    <string name="txt_fuel_type">Combustible</string>
    <string name="txt_gasoline">Gasolina</string>
    <string name="txt_diesel">Diesel</string>
    <string name="txt_price">Precio</string>
    <string name="hint_min_cost">Mínimo</string>
    <string name="hint_max_cost">Máximo</string>
    <string name="txt_clean">Limpiar</string>
    <string name="txt_brand">Marca</string>
    <string name="txt_saved">Guardados</string>
    <string name="txt_my_account">Mi cuenta</string>
    <string name="txt_cars">Automóviles</string>
    <string name="txt_saved_cars">Guardados</string>
    <string name="txt_phone_call_permission">Necesitas acpetar el permiso de llamadas para realizar esta acción</string>
    <string name="txt_electric">Eléctrico</string>
    <string name="txt_ok">OK</string>
    <string name="txt_user_contact_required">Llena tus datos de contacto en Mi Cuenta para realizar esta acción</string>
    <string name="txt_you_need_internet">Sin conexión. Necesitas acceso a internet para acceder a la aplicación</string>
    <string name="txt_no_coincidences">No hay coincidencias</string>
    <string name="txt_need_registered">Necesitas tener una cuenta para realizar esta acción. Accede a \"Mi Cuenta\" para configurarla.</string>
    <string name="txt_transaction_error">Error al actualizar</string>
    <string name="txt_traction">Tracción: </string>
    <string name="txt_motor">Motor: </string>
    <string name="txt_horse_power">Caballos de fuerza: </string>
    <string name="txt_contact_data_updated">Registro de contaco actualizado</string>
    <string name="txt_contact_data_registered">Tus datos se han registrado</string>
    <string name="txt_no_cars_savedN">No tienes ningun auto guardado</string>
    <string name="txt_no_cars_saved">No tiene ningún auto guardado</string>
    <string name="txt_already_request_data">Ya se había registrado la solicitud de informes de este auto</string>
    <string name="txt_rquest_send">Solicitud registrada</string>
    <string name="txt_could_not_send_data">Ocurrió un problema con la solicitud</string>
</resources>